모든 수치를 dimen에서 참조하도록 변경

--- a/app/src/main/res/drawable/item_setting_under_small_rounded_corner.xml
+++ b/app/src/main/res/drawable/item_setting_under_small_rounded_corner.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/itemBackground"/>
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"/>
+        android:bottomLeftRadius="@dimen/sub_item_rounded_corner"
+        android:bottomRightRadius="@dimen/sub_item_rounded_corner"/>
 <!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
 </shape>
