--- a/app/src/main/res/layout/activity_on_alarm.xml
+++ b/app/src/main/res/layout/activity_on_alarm.xml
@@ -31,7 +31,7 @@
                 android:fontFamily="@font/nanumgothicextrabold"
                 android:text="00"
                 android:textColor="@color/white"
-                android:textSize="75sp"
+                android:textSize="@dimen/text_h1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
@@ -44,9 +44,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nanumgothicextrabold"
-                android:text=":"
+                android:text="@string/time_split"
                 android:textColor="@color/white"
-                android:textSize="75sp"
+                android:textSize="@dimen/text_h1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
                 android:fontFamily="@font/nanumgothicextrabold"
                 android:text="00"
                 android:textColor="@color/white"
-                android:textSize="75sp"
+                android:textSize="@dimen/text_h1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.25"
@@ -89,11 +89,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/main_blue"
-                android:padding="20dp"
+                android:padding="@dimen/element_spacing_xlarge"
                 android:text="@string/ten_minutes_later"
                 android:textAllCaps="false"
-                android:textSize="20sp"
-                app:cornerRadius="20dp"
+                android:textSize="@dimen/text_p3"
+                app:cornerRadius="@dimen/element_spacing_xlarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.172"
@@ -106,11 +106,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/mainColor"
-                android:padding="20dp"
+                android:padding="@dimen/element_spacing_xlarge"
                 android:text="@string/ok"
                 android:textAllCaps="false"
-                android:textSize="20sp"
-                app:cornerRadius="20dp"
+                android:textSize="@dimen/text_p3"
+                app:cornerRadius="@dimen/element_spacing_xlarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.82"
