--- a/app/src/main/res/layout/dialog_bell_set.xml
+++ b/app/src/main/res/layout/dialog_bell_set.xml
@@ -3,24 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/item_rounded_corner_orange"
     >
 
     <LinearLayout
-        android:layout_width="320dp"
+        android:layout_width="@dimen/custom_dialog_width"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/item_rounded_corner_orange"
         android:orientation="vertical"
-        android:padding="40dp">
+        android:padding="@dimen/element_spacing_super_large">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="@dimen/element_spacing_xlarge"
             android:text="@string/dialog_bell_set_title"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_p3"
             android:textStyle="bold" />
 
         <RadioGroup
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanumgothicbold"
-            android:textSize="17sp"
+            android:textSize="@dimen/text_p5"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Walking" />
 
@@ -41,7 +41,7 @@
             android:id="@+id/radioButton_N2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="@dimen/text_p5"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_PianoMan" />
@@ -50,7 +50,7 @@
             android:id="@+id/radioButton_N3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="@dimen/text_p5"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Happy" />
@@ -59,7 +59,7 @@
             android:id="@+id/radioButton_N4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="@dimen/text_p5"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Lonely" />
@@ -70,28 +70,28 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="@dimen/element_spacing_normal">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/playButton"
-                android:layout_width="120dp"
+                android:layout_width="@dimen/alarmSet_button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="@dimen/element_spacing_normal"
                 android:backgroundTint="@color/new_subTextColor"
-                app:cornerRadius="20dp"
+                app:cornerRadius="@dimen/element_spacing_xlarge"
                 android:layout_weight="1"
-                android:padding="12dp"
+                android:padding="@dimen/element_spacing_xnormal"
                 android:text="@string/play" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveButton"
-                android:layout_width="120dp"
+                android:layout_width="@dimen/alarmSet_button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginEnd="@dimen/element_spacing_normal"
                 android:backgroundTint="@color/mainColor"
-                app:cornerRadius="20dp"
+                app:cornerRadius="@dimen/element_spacing_xlarge"
                 android:layout_weight="1"
-                android:padding="12dp"
+                android:padding="@dimen/element_spacing_xnormal"
                 android:text="@string/save" />
         </LinearLayout>
     </LinearLayout>
