--- a/app/src/main/res/drawable/item_rounded_corner_orange.xml
+++ b/app/src/main/res/drawable/item_rounded_corner_orange.xml
@@ -2,6 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/itemBackground"/>
     <stroke android:width="5dp" android:color="#FAA78F" />
-    <corners android:radius="40dp"/>
-<!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
+    <corners android:radius="@dimen/item_rounded_corner"/>
 </shape>
