--- a/app/src/main/res/drawable/item_setting_uppper_small_rounded_corner.xml
+++ b/app/src/main/res/drawable/item_setting_uppper_small_rounded_corner.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/itemBackground"/>
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+        android:topLeftRadius="@dimen/sub_item_rounded_corner"
+        android:topRightRadius="@dimen/sub_item_rounded_corner"/>
 <!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
 </shape>
