--- a/app/src/main/res/drawable/switch_thumb_on.xml
+++ b/app/src/main/res/drawable/switch_thumb_on.xml
@@ -4,8 +4,8 @@
     android:shape="oval">
 
     <size
-        android:width="25dp"
-        android:height="25dp" />
+        android:width="@dimen/check_button_head_diameter"
+        android:height="@dimen/check_button_head_diameter" />
 
     <gradient
         android:startColor="#7012CF"
