--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners
-        android:radius="15dp" />
+        android:radius="@dimen/check_button_radius" />
     <size
-        android:width="75dp"
-        android:height="25dp" />
+        android:width="@dimen/check_button_width"
+        android:height="@dimen/check_button_height" />
     <solid
         android:color="@color/Space_Purple" />
     <stroke
-        android:width="2dp"
+        android:width="@dimen/check_button_stroke"
         android:color="@color/Space_Purple" />
 </shape>
