--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -10,15 +10,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="@dimen/element_spacing_xlarge"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="12dp"
+                android:layout_width="@dimen/element_spcaing_xxxxlarge"
+                android:layout_height="@dimen/element_spcaing_xxxxlarge"
+                android:layout_marginEnd="@dimen/element_spacing_xnormal"
                 app:srcCompat="@drawable/ic_baseline_setting"
                 app:tint="@color/sub_item_text_color" />
 
@@ -29,7 +29,7 @@
                 android:gravity="center_vertical"
                 android:text="Settings"
                 android:textColor="@color/sub_item_text_color"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_p3"
                 android:textStyle="bold" />
 
         </LinearLayout>
